fix(config): restore allowedPaths and version/risk fields in quick.config.json and tech_stack.json

--- a/quick.config.json
+++ b/quick.config.json
@@ -6,6 +6,13 @@
     "allowNewFiles": false,
     "allowRenames": false
   },
+  "allowedPaths": [
+    "apps/web",
+    "packages/core",
+    "packages/api",
+    "packages/db",
+    "packages/worker"
+  ],
   "escalateIf": {
     "touchesPublicAPI": true,
     "addsDependency": true,
